// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/group/GroupUsers should match snapshot, loaded with multiple pages 1`] = `
<div
  className="groups-list groups-list-less-padding"
>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.team_channel_settings.user_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Role"
        id="admin.team_channel_settings.user_list.roleHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Groups"
        id="admin.team_channel_settings.user_list.groupsHeader"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="groups-list--body"
  >
    <AdminGroupUsersRow
      displayName="Name0 Surname0"
      key="id0"
      lastPictureUpdate={0}
      user={
        Object {
          "email": "test0@test.com",
          "first_name": "Name0",
          "id": "id0",
          "last_name": "Surname0",
          "last_picture_update": 0,
          "username": "username0",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name1 Surname1"
      key="id1"
      lastPictureUpdate={1}
      user={
        Object {
          "email": "test1@test.com",
          "first_name": "Name1",
          "id": "id1",
          "last_name": "Surname1",
          "last_picture_update": 1,
          "username": "username1",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name2 Surname2"
      key="id2"
      lastPictureUpdate={2}
      user={
        Object {
          "email": "test2@test.com",
          "first_name": "Name2",
          "id": "id2",
          "last_name": "Surname2",
          "last_picture_update": 2,
          "username": "username2",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name3 Surname3"
      key="id3"
      lastPictureUpdate={3}
      user={
        Object {
          "email": "test3@test.com",
          "first_name": "Name3",
          "id": "id3",
          "last_name": "Surname3",
          "last_picture_update": 3,
          "username": "username3",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name4 Surname4"
      key="id4"
      lastPictureUpdate={4}
      user={
        Object {
          "email": "test4@test.com",
          "first_name": "Name4",
          "id": "id4",
          "last_name": "Surname4",
          "last_picture_update": 4,
          "username": "username4",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name5 Surname5"
      key="id5"
      lastPictureUpdate={5}
      user={
        Object {
          "email": "test5@test.com",
          "first_name": "Name5",
          "id": "id5",
          "last_name": "Surname5",
          "last_picture_update": 5,
          "username": "username5",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name6 Surname6"
      key="id6"
      lastPictureUpdate={6}
      user={
        Object {
          "email": "test6@test.com",
          "first_name": "Name6",
          "id": "id6",
          "last_name": "Surname6",
          "last_picture_update": 6,
          "username": "username6",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name7 Surname7"
      key="id7"
      lastPictureUpdate={7}
      user={
        Object {
          "email": "test7@test.com",
          "first_name": "Name7",
          "id": "id7",
          "last_name": "Surname7",
          "last_picture_update": 7,
          "username": "username7",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name8 Surname8"
      key="id8"
      lastPictureUpdate={8}
      user={
        Object {
          "email": "test8@test.com",
          "first_name": "Name8",
          "id": "id8",
          "last_name": "Surname8",
          "last_picture_update": 8,
          "username": "username8",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name9 Surname9"
      key="id9"
      lastPictureUpdate={9}
      user={
        Object {
          "email": "test9@test.com",
          "first_name": "Name9",
          "id": "id9",
          "last_name": "Surname9",
          "last_picture_update": 9,
          "username": "username9",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name10 Surname10"
      key="id10"
      lastPictureUpdate={10}
      user={
        Object {
          "email": "test10@test.com",
          "first_name": "Name10",
          "id": "id10",
          "last_name": "Surname10",
          "last_picture_update": 10,
          "username": "username10",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name11 Surname11"
      key="id11"
      lastPictureUpdate={11}
      user={
        Object {
          "email": "test11@test.com",
          "first_name": "Name11",
          "id": "id11",
          "last_name": "Surname11",
          "last_picture_update": 11,
          "username": "username11",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name12 Surname12"
      key="id12"
      lastPictureUpdate={12}
      user={
        Object {
          "email": "test12@test.com",
          "first_name": "Name12",
          "id": "id12",
          "last_name": "Surname12",
          "last_picture_update": 12,
          "username": "username12",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name13 Surname13"
      key="id13"
      lastPictureUpdate={13}
      user={
        Object {
          "email": "test13@test.com",
          "first_name": "Name13",
          "id": "id13",
          "last_name": "Surname13",
          "last_picture_update": 13,
          "username": "username13",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name14 Surname14"
      key="id14"
      lastPictureUpdate={14}
      user={
        Object {
          "email": "test14@test.com",
          "first_name": "Name14",
          "id": "id14",
          "last_name": "Surname14",
          "last_picture_update": 14,
          "username": "username14",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name15 Surname15"
      key="id15"
      lastPictureUpdate={15}
      user={
        Object {
          "email": "test15@test.com",
          "first_name": "Name15",
          "id": "id15",
          "last_name": "Surname15",
          "last_picture_update": 15,
          "username": "username15",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name16 Surname16"
      key="id16"
      lastPictureUpdate={16}
      user={
        Object {
          "email": "test16@test.com",
          "first_name": "Name16",
          "id": "id16",
          "last_name": "Surname16",
          "last_picture_update": 16,
          "username": "username16",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name17 Surname17"
      key="id17"
      lastPictureUpdate={17}
      user={
        Object {
          "email": "test17@test.com",
          "first_name": "Name17",
          "id": "id17",
          "last_name": "Surname17",
          "last_picture_update": 17,
          "username": "username17",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name18 Surname18"
      key="id18"
      lastPictureUpdate={18}
      user={
        Object {
          "email": "test18@test.com",
          "first_name": "Name18",
          "id": "id18",
          "last_name": "Surname18",
          "last_picture_update": 18,
          "username": "username18",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name19 Surname19"
      key="id19"
      lastPictureUpdate={19}
      user={
        Object {
          "email": "test19@test.com",
          "first_name": "Name19",
          "id": "id19",
          "last_name": "Surname19",
          "last_picture_update": 19,
          "username": "username19",
        }
      }
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.team_channel_settings.list.paginatorCount"
        values={
          Object {
            "endCount": 10,
            "startCount": 1,
            "total": 55,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next "
      disabled={false}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/group/GroupUsers should match snapshot, loaded with multiple pages 2`] = `
<div
  className="groups-list groups-list-less-padding"
>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.team_channel_settings.user_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Role"
        id="admin.team_channel_settings.user_list.roleHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Groups"
        id="admin.team_channel_settings.user_list.groupsHeader"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="groups-list--body"
  >
    <AdminGroupUsersRow
      displayName="Name0 Surname0"
      key="id0"
      lastPictureUpdate={0}
      user={
        Object {
          "email": "test0@test.com",
          "first_name": "Name0",
          "id": "id0",
          "last_name": "Surname0",
          "last_picture_update": 0,
          "username": "username0",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name1 Surname1"
      key="id1"
      lastPictureUpdate={1}
      user={
        Object {
          "email": "test1@test.com",
          "first_name": "Name1",
          "id": "id1",
          "last_name": "Surname1",
          "last_picture_update": 1,
          "username": "username1",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name2 Surname2"
      key="id2"
      lastPictureUpdate={2}
      user={
        Object {
          "email": "test2@test.com",
          "first_name": "Name2",
          "id": "id2",
          "last_name": "Surname2",
          "last_picture_update": 2,
          "username": "username2",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name3 Surname3"
      key="id3"
      lastPictureUpdate={3}
      user={
        Object {
          "email": "test3@test.com",
          "first_name": "Name3",
          "id": "id3",
          "last_name": "Surname3",
          "last_picture_update": 3,
          "username": "username3",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name4 Surname4"
      key="id4"
      lastPictureUpdate={4}
      user={
        Object {
          "email": "test4@test.com",
          "first_name": "Name4",
          "id": "id4",
          "last_name": "Surname4",
          "last_picture_update": 4,
          "username": "username4",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name5 Surname5"
      key="id5"
      lastPictureUpdate={5}
      user={
        Object {
          "email": "test5@test.com",
          "first_name": "Name5",
          "id": "id5",
          "last_name": "Surname5",
          "last_picture_update": 5,
          "username": "username5",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name6 Surname6"
      key="id6"
      lastPictureUpdate={6}
      user={
        Object {
          "email": "test6@test.com",
          "first_name": "Name6",
          "id": "id6",
          "last_name": "Surname6",
          "last_picture_update": 6,
          "username": "username6",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name7 Surname7"
      key="id7"
      lastPictureUpdate={7}
      user={
        Object {
          "email": "test7@test.com",
          "first_name": "Name7",
          "id": "id7",
          "last_name": "Surname7",
          "last_picture_update": 7,
          "username": "username7",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name8 Surname8"
      key="id8"
      lastPictureUpdate={8}
      user={
        Object {
          "email": "test8@test.com",
          "first_name": "Name8",
          "id": "id8",
          "last_name": "Surname8",
          "last_picture_update": 8,
          "username": "username8",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name9 Surname9"
      key="id9"
      lastPictureUpdate={9}
      user={
        Object {
          "email": "test9@test.com",
          "first_name": "Name9",
          "id": "id9",
          "last_name": "Surname9",
          "last_picture_update": 9,
          "username": "username9",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name10 Surname10"
      key="id10"
      lastPictureUpdate={10}
      user={
        Object {
          "email": "test10@test.com",
          "first_name": "Name10",
          "id": "id10",
          "last_name": "Surname10",
          "last_picture_update": 10,
          "username": "username10",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name11 Surname11"
      key="id11"
      lastPictureUpdate={11}
      user={
        Object {
          "email": "test11@test.com",
          "first_name": "Name11",
          "id": "id11",
          "last_name": "Surname11",
          "last_picture_update": 11,
          "username": "username11",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name12 Surname12"
      key="id12"
      lastPictureUpdate={12}
      user={
        Object {
          "email": "test12@test.com",
          "first_name": "Name12",
          "id": "id12",
          "last_name": "Surname12",
          "last_picture_update": 12,
          "username": "username12",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name13 Surname13"
      key="id13"
      lastPictureUpdate={13}
      user={
        Object {
          "email": "test13@test.com",
          "first_name": "Name13",
          "id": "id13",
          "last_name": "Surname13",
          "last_picture_update": 13,
          "username": "username13",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name14 Surname14"
      key="id14"
      lastPictureUpdate={14}
      user={
        Object {
          "email": "test14@test.com",
          "first_name": "Name14",
          "id": "id14",
          "last_name": "Surname14",
          "last_picture_update": 14,
          "username": "username14",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name15 Surname15"
      key="id15"
      lastPictureUpdate={15}
      user={
        Object {
          "email": "test15@test.com",
          "first_name": "Name15",
          "id": "id15",
          "last_name": "Surname15",
          "last_picture_update": 15,
          "username": "username15",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name16 Surname16"
      key="id16"
      lastPictureUpdate={16}
      user={
        Object {
          "email": "test16@test.com",
          "first_name": "Name16",
          "id": "id16",
          "last_name": "Surname16",
          "last_picture_update": 16,
          "username": "username16",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name17 Surname17"
      key="id17"
      lastPictureUpdate={17}
      user={
        Object {
          "email": "test17@test.com",
          "first_name": "Name17",
          "id": "id17",
          "last_name": "Surname17",
          "last_picture_update": 17,
          "username": "username17",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name18 Surname18"
      key="id18"
      lastPictureUpdate={18}
      user={
        Object {
          "email": "test18@test.com",
          "first_name": "Name18",
          "id": "id18",
          "last_name": "Surname18",
          "last_picture_update": 18,
          "username": "username18",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name19 Surname19"
      key="id19"
      lastPictureUpdate={19}
      user={
        Object {
          "email": "test19@test.com",
          "first_name": "Name19",
          "id": "id19",
          "last_name": "Surname19",
          "last_picture_update": 19,
          "username": "username19",
        }
      }
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.team_channel_settings.list.paginatorCount"
        values={
          Object {
            "endCount": 20,
            "startCount": 11,
            "total": 55,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev "
      disabled={false}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next "
      disabled={false}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/group/GroupUsers should match snapshot, loaded with multiple pages 3`] = `
<div
  className="groups-list groups-list-less-padding"
>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.team_channel_settings.user_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Role"
        id="admin.team_channel_settings.user_list.roleHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Groups"
        id="admin.team_channel_settings.user_list.groupsHeader"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="groups-list--body"
  >
    <AdminGroupUsersRow
      displayName="Name0 Surname0"
      key="id0"
      lastPictureUpdate={0}
      user={
        Object {
          "email": "test0@test.com",
          "first_name": "Name0",
          "id": "id0",
          "last_name": "Surname0",
          "last_picture_update": 0,
          "username": "username0",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name1 Surname1"
      key="id1"
      lastPictureUpdate={1}
      user={
        Object {
          "email": "test1@test.com",
          "first_name": "Name1",
          "id": "id1",
          "last_name": "Surname1",
          "last_picture_update": 1,
          "username": "username1",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name2 Surname2"
      key="id2"
      lastPictureUpdate={2}
      user={
        Object {
          "email": "test2@test.com",
          "first_name": "Name2",
          "id": "id2",
          "last_name": "Surname2",
          "last_picture_update": 2,
          "username": "username2",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name3 Surname3"
      key="id3"
      lastPictureUpdate={3}
      user={
        Object {
          "email": "test3@test.com",
          "first_name": "Name3",
          "id": "id3",
          "last_name": "Surname3",
          "last_picture_update": 3,
          "username": "username3",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name4 Surname4"
      key="id4"
      lastPictureUpdate={4}
      user={
        Object {
          "email": "test4@test.com",
          "first_name": "Name4",
          "id": "id4",
          "last_name": "Surname4",
          "last_picture_update": 4,
          "username": "username4",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name5 Surname5"
      key="id5"
      lastPictureUpdate={5}
      user={
        Object {
          "email": "test5@test.com",
          "first_name": "Name5",
          "id": "id5",
          "last_name": "Surname5",
          "last_picture_update": 5,
          "username": "username5",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name6 Surname6"
      key="id6"
      lastPictureUpdate={6}
      user={
        Object {
          "email": "test6@test.com",
          "first_name": "Name6",
          "id": "id6",
          "last_name": "Surname6",
          "last_picture_update": 6,
          "username": "username6",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name7 Surname7"
      key="id7"
      lastPictureUpdate={7}
      user={
        Object {
          "email": "test7@test.com",
          "first_name": "Name7",
          "id": "id7",
          "last_name": "Surname7",
          "last_picture_update": 7,
          "username": "username7",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name8 Surname8"
      key="id8"
      lastPictureUpdate={8}
      user={
        Object {
          "email": "test8@test.com",
          "first_name": "Name8",
          "id": "id8",
          "last_name": "Surname8",
          "last_picture_update": 8,
          "username": "username8",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name9 Surname9"
      key="id9"
      lastPictureUpdate={9}
      user={
        Object {
          "email": "test9@test.com",
          "first_name": "Name9",
          "id": "id9",
          "last_name": "Surname9",
          "last_picture_update": 9,
          "username": "username9",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name10 Surname10"
      key="id10"
      lastPictureUpdate={10}
      user={
        Object {
          "email": "test10@test.com",
          "first_name": "Name10",
          "id": "id10",
          "last_name": "Surname10",
          "last_picture_update": 10,
          "username": "username10",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name11 Surname11"
      key="id11"
      lastPictureUpdate={11}
      user={
        Object {
          "email": "test11@test.com",
          "first_name": "Name11",
          "id": "id11",
          "last_name": "Surname11",
          "last_picture_update": 11,
          "username": "username11",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name12 Surname12"
      key="id12"
      lastPictureUpdate={12}
      user={
        Object {
          "email": "test12@test.com",
          "first_name": "Name12",
          "id": "id12",
          "last_name": "Surname12",
          "last_picture_update": 12,
          "username": "username12",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name13 Surname13"
      key="id13"
      lastPictureUpdate={13}
      user={
        Object {
          "email": "test13@test.com",
          "first_name": "Name13",
          "id": "id13",
          "last_name": "Surname13",
          "last_picture_update": 13,
          "username": "username13",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name14 Surname14"
      key="id14"
      lastPictureUpdate={14}
      user={
        Object {
          "email": "test14@test.com",
          "first_name": "Name14",
          "id": "id14",
          "last_name": "Surname14",
          "last_picture_update": 14,
          "username": "username14",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name15 Surname15"
      key="id15"
      lastPictureUpdate={15}
      user={
        Object {
          "email": "test15@test.com",
          "first_name": "Name15",
          "id": "id15",
          "last_name": "Surname15",
          "last_picture_update": 15,
          "username": "username15",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name16 Surname16"
      key="id16"
      lastPictureUpdate={16}
      user={
        Object {
          "email": "test16@test.com",
          "first_name": "Name16",
          "id": "id16",
          "last_name": "Surname16",
          "last_picture_update": 16,
          "username": "username16",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name17 Surname17"
      key="id17"
      lastPictureUpdate={17}
      user={
        Object {
          "email": "test17@test.com",
          "first_name": "Name17",
          "id": "id17",
          "last_name": "Surname17",
          "last_picture_update": 17,
          "username": "username17",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name18 Surname18"
      key="id18"
      lastPictureUpdate={18}
      user={
        Object {
          "email": "test18@test.com",
          "first_name": "Name18",
          "id": "id18",
          "last_name": "Surname18",
          "last_picture_update": 18,
          "username": "username18",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name19 Surname19"
      key="id19"
      lastPictureUpdate={19}
      user={
        Object {
          "email": "test19@test.com",
          "first_name": "Name19",
          "id": "id19",
          "last_name": "Surname19",
          "last_picture_update": 19,
          "username": "username19",
        }
      }
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.team_channel_settings.list.paginatorCount"
        values={
          Object {
            "endCount": 30,
            "startCount": 21,
            "total": 55,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev "
      disabled={false}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next "
      disabled={false}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/group/GroupUsers should match snapshot, on loading with data 1`] = `
<div
  className="groups-list groups-list-less-padding"
>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.team_channel_settings.user_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Role"
        id="admin.team_channel_settings.user_list.roleHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Groups"
        id="admin.team_channel_settings.user_list.groupsHeader"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="groups-list--body"
  >
    <AdminGroupUsersRow
      displayName="Name0 Surname0"
      key="id0"
      lastPictureUpdate={0}
      user={
        Object {
          "email": "test0@test.com",
          "first_name": "Name0",
          "id": "id0",
          "last_name": "Surname0",
          "last_picture_update": 0,
          "username": "username0",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name1 Surname1"
      key="id1"
      lastPictureUpdate={1}
      user={
        Object {
          "email": "test1@test.com",
          "first_name": "Name1",
          "id": "id1",
          "last_name": "Surname1",
          "last_picture_update": 1,
          "username": "username1",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name2 Surname2"
      key="id2"
      lastPictureUpdate={2}
      user={
        Object {
          "email": "test2@test.com",
          "first_name": "Name2",
          "id": "id2",
          "last_name": "Surname2",
          "last_picture_update": 2,
          "username": "username2",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name3 Surname3"
      key="id3"
      lastPictureUpdate={3}
      user={
        Object {
          "email": "test3@test.com",
          "first_name": "Name3",
          "id": "id3",
          "last_name": "Surname3",
          "last_picture_update": 3,
          "username": "username3",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name4 Surname4"
      key="id4"
      lastPictureUpdate={4}
      user={
        Object {
          "email": "test4@test.com",
          "first_name": "Name4",
          "id": "id4",
          "last_name": "Surname4",
          "last_picture_update": 4,
          "username": "username4",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name5 Surname5"
      key="id5"
      lastPictureUpdate={5}
      user={
        Object {
          "email": "test5@test.com",
          "first_name": "Name5",
          "id": "id5",
          "last_name": "Surname5",
          "last_picture_update": 5,
          "username": "username5",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name6 Surname6"
      key="id6"
      lastPictureUpdate={6}
      user={
        Object {
          "email": "test6@test.com",
          "first_name": "Name6",
          "id": "id6",
          "last_name": "Surname6",
          "last_picture_update": 6,
          "username": "username6",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name7 Surname7"
      key="id7"
      lastPictureUpdate={7}
      user={
        Object {
          "email": "test7@test.com",
          "first_name": "Name7",
          "id": "id7",
          "last_name": "Surname7",
          "last_picture_update": 7,
          "username": "username7",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name8 Surname8"
      key="id8"
      lastPictureUpdate={8}
      user={
        Object {
          "email": "test8@test.com",
          "first_name": "Name8",
          "id": "id8",
          "last_name": "Surname8",
          "last_picture_update": 8,
          "username": "username8",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name9 Surname9"
      key="id9"
      lastPictureUpdate={9}
      user={
        Object {
          "email": "test9@test.com",
          "first_name": "Name9",
          "id": "id9",
          "last_name": "Surname9",
          "last_picture_update": 9,
          "username": "username9",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name10 Surname10"
      key="id10"
      lastPictureUpdate={10}
      user={
        Object {
          "email": "test10@test.com",
          "first_name": "Name10",
          "id": "id10",
          "last_name": "Surname10",
          "last_picture_update": 10,
          "username": "username10",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name11 Surname11"
      key="id11"
      lastPictureUpdate={11}
      user={
        Object {
          "email": "test11@test.com",
          "first_name": "Name11",
          "id": "id11",
          "last_name": "Surname11",
          "last_picture_update": 11,
          "username": "username11",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name12 Surname12"
      key="id12"
      lastPictureUpdate={12}
      user={
        Object {
          "email": "test12@test.com",
          "first_name": "Name12",
          "id": "id12",
          "last_name": "Surname12",
          "last_picture_update": 12,
          "username": "username12",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name13 Surname13"
      key="id13"
      lastPictureUpdate={13}
      user={
        Object {
          "email": "test13@test.com",
          "first_name": "Name13",
          "id": "id13",
          "last_name": "Surname13",
          "last_picture_update": 13,
          "username": "username13",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name14 Surname14"
      key="id14"
      lastPictureUpdate={14}
      user={
        Object {
          "email": "test14@test.com",
          "first_name": "Name14",
          "id": "id14",
          "last_name": "Surname14",
          "last_picture_update": 14,
          "username": "username14",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name15 Surname15"
      key="id15"
      lastPictureUpdate={15}
      user={
        Object {
          "email": "test15@test.com",
          "first_name": "Name15",
          "id": "id15",
          "last_name": "Surname15",
          "last_picture_update": 15,
          "username": "username15",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name16 Surname16"
      key="id16"
      lastPictureUpdate={16}
      user={
        Object {
          "email": "test16@test.com",
          "first_name": "Name16",
          "id": "id16",
          "last_name": "Surname16",
          "last_picture_update": 16,
          "username": "username16",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name17 Surname17"
      key="id17"
      lastPictureUpdate={17}
      user={
        Object {
          "email": "test17@test.com",
          "first_name": "Name17",
          "id": "id17",
          "last_name": "Surname17",
          "last_picture_update": 17,
          "username": "username17",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name18 Surname18"
      key="id18"
      lastPictureUpdate={18}
      user={
        Object {
          "email": "test18@test.com",
          "first_name": "Name18",
          "id": "id18",
          "last_name": "Surname18",
          "last_picture_update": 18,
          "username": "username18",
        }
      }
    />
    <AdminGroupUsersRow
      displayName="Name19 Surname19"
      key="id19"
      lastPictureUpdate={19}
      user={
        Object {
          "email": "test19@test.com",
          "first_name": "Name19",
          "id": "id19",
          "last_name": "Surname19",
          "last_picture_update": 19,
          "username": "username19",
        }
      }
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.team_channel_settings.list.paginatorCount"
        values={
          Object {
            "endCount": 10,
            "startCount": 1,
            "total": 20,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next "
      disabled={false}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/group/GroupUsers should match snapshot, on loading without data 1`] = `
<div
  className="groups-list groups-list-less-padding"
>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.team_channel_settings.user_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Role"
        id="admin.team_channel_settings.user_list.roleHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description group-users--header-padded"
    >
      <FormattedMessage
        defaultMessage="Groups"
        id="admin.team_channel_settings.user_list.groupsHeader"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="groups-list--body"
  />
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.team_channel_settings.list.paginatorCount"
        values={
          Object {
            "endCount": 10,
            "startCount": 1,
            "total": 20,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next "
      disabled={false}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;
